--- a/index.html
+++ b/index.html
@@ -97,73 +97,150 @@
                 <!DOCTYPE html>
 <!-- -----------------------------------------------LOWER ZIPPED -->
 
-<span id="chronotime">0:00:00:00</span>
-<form name="chronoForm">
-    <input type="button" name="startstop" value="start!" onClick="chronoStart()" />
-    <input type="button" name="reset" value="reset!" onClick="chronoReset()" />
-</form>
+<!-- this script got from www.htmlbestcodes.com-Coded by: Krishna Eydat -->
+<html>
+<head>
+<style>
+* {margin: 0; padding: 0;}
+.container {
+    padding: 10px;
+    text-align: center;
+}
+.timer {
+    padding: 10px;
+    background: linear-gradient(top, #222, #444);
+    overflow: hidden;
+    display: inline-block;
+    border: 7px solid #efefef;
+    border-radius: 5px;
+    position: relative;
+    box-shadow:
+        inset 0 -2px 10px 1px rgba(0, 0, 0, 0.75),
+        0 5px 20px -10px rgba(0, 0, 0, 1);
+}
+.cell {
+    /*Should only display 1 digit. Hence height = line height of .numbers
+    and width = width of .numbers*/
+    width: 0.60em;
+    height: 40px;
+    font-size: 50px;
+    overflow: hidden;
+    position: relative;
+    float: left;
+}
+.numbers {
+    width: 0.6em;
+    line-height: 40px;
+    font-family: digital, arial, verdana;
+    text-align: center;
+    color: #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    /*Glow to the text*/
+    text-shadow: 0 0 5px rgba(255, 255, 255, 1);
+}
+/*Styles for the controls*/
+#timer_controls {
+    margin-top: -5px;
+}
+#timer_controls label {
+    cursor: pointer;
+    padding: 5px 10px;
+    background: #efefef;
+    font-family: arial, verdana, tahoma;
+    font-size: 11px;
+    border-radius: 0 0 3px 3px;
+}
+input[name="controls"] {display: none;}
+/*Control code*/
+#stop:checked~.timer .numbers {animation-play-state: paused;}
+#start:checked~.timer .numbers {animation-play-state: running;}
+#reset:checked~.timer .numbers {animation: none;}
+.moveten {
+    /*The digits move but dont look good. We will use steps now
+    10 digits = 10 steps. You can now see the digits swapping instead of
+    moving pixel-by-pixel*/
+    animation: moveten 1s steps(10, end) infinite;
+    /*By default animation should be paused*/
+    animation-play-state: paused;
+}
+.movesix {
+    animation: movesix 1s steps(6, end) infinite;
+    animation-play-state: paused;
+}
+/*Now we need to sync the animation speed with time speed*/
+/*One second per digit. 10 digits. Hence 10s*/
+.second {animation-duration: 10s;}
+.tensecond {animation-duration: 60s;} /*60 times .second*/
+.milisecond {animation-duration: 1s;} /*1/10th of .second*/
+.tenmilisecond {animation-duration: 0.1s;}
+.hundredmilisecond {animation-duration: 0.01s;}
+.minute {animation-duration: 600s;} /*60 times .second*/
+.tenminute {animation-duration: 3600s;} /*60 times .minute*/
+.hour {animation-duration: 36000s;} /*60 times .minute*/
+.tenhour {animation-duration: 360000s;} /*10 times .hour*/
+@keyframes moveten {
+    0% {top: 0;}
+    100% {top: -400px;}
+    /*height = 40. digits = 10. hence -400 to move it completely to the top*/
+}
+@keyframes movesix {
+    0% {top: 0;}
+    100% {top: -240px;}
+    /*height = 40. digits = 6. hence -240 to move it completely to the top*/
+}
+</style>
+</head>
+<body style="background-color:#000">
+<div class="container">
+    <!-- time to add the controls -->
+    <input id="start" name="controls" type="radio" />
+    <input id="stop" name="controls" type="radio" />
+    <input id="reset" name="controls" type="radio" />
+    <div class="timer">
+        <div class="cell">
+            <div class="numbers tenhour moveten">0 1 2 3 4 5 6 7 8 9</div>
+        </div>
+        <div class="cell">
+            <div class="numbers hour moveten">0 1 2 3 4 5 6 7 8 9</div>
+        </div>
+        <div class="cell divider"><div class="numbers">:</div></div>
+        <div class="cell">
+            <div class="numbers tenminute movesix">0 1 2 3 4 5 6</div>
+        </div>
+        <div class="cell">
+            <div class="numbers minute moveten">0 1 2 3 4 5 6 7 8 9</div>
+        </div>
+        <div class="cell divider"><div class="numbers">:</div></div>
+        <div class="cell">
+            <div class="numbers tensecond movesix">0 1 2 3 4 5 6</div>
+        </div>
+        <div class="cell">
+            <div class="numbers second moveten">0 1 2 3 4 5 6 7 8 9</div>
+        </div>
+        <div class="cell divider"><div class="numbers">:</div></div>
+        <div class="cell">
+            <div class="numbers milisecond moveten">0 1 2 3 4 5 6 7 8 9</div>
+        </div>
+        <div class="cell">
+            <div class="numbers tenmilisecond moveten">0 1 2 3 4 5 6 7 8 9</div>
+        </div>
+        <div class="cell">
+            <div class="numbers hundredmilisecond moveten">0 1 2 3 4 5 6 7 8 9</div>
+        </div>
+    </div>
+    <!-- Lables for the controls -->
+    <div id="timer_controls">
+        <label for="start">Start</label>
+        <label for="stop">Stop</label>
+        <label for="reset">Reset</label>
+    </div>
+</div>
+</body>
+</html>
 
-<script language="JavaScript">
-<!--
-var startTime = 0
-var start = 0
-var end = 0
-var diff = 0
-var timerID = 0
-function chrono(){
-    end = new Date()
-    diff = end - start
-    diff = new Date(diff)
-    var msec = diff.getMilliseconds()
-    var sec = diff.getSeconds()
-    var min = diff.getMinutes()
-    var hr = diff.getHours()-19
-    if (min < 10){
-        min = "0" + min
-    }
-    if (sec < 10){
-        sec = "0" + sec
-    }
-    if(msec < 10){
-        msec = "00" +msec
-    }
-    else if(msec < 100){
-        msec = "0" +msec
-    }
-    document.getElementById("chronotime").innerHTML = hr + ":" + min + ":" + sec + ":" + msec
-    timerID = setTimeout("chrono()", 10)
-}
-function chronoStart(){
-    document.chronoForm.startstop.value = "stop!"
-    document.chronoForm.startstop.onclick = chronoStop
-    document.chronoForm.reset.onclick = chronoReset
-    start = new Date()
-    chrono()
-}
-function chronoContinue(){
-    document.chronoForm.startstop.value = "stop!"
-    document.chronoForm.startstop.onclick = chronoStop
-    document.chronoForm.reset.onclick = chronoReset
-    start = new Date()-diff
-    start = new Date(start)
-    chrono()
-}
-function chronoReset(){
-    document.getElementById("chronotime").innerHTML = "0:00:00:000"
-    start = new Date()
-}
-function chronoStopReset(){
-    document.getElementById("chronotime").innerHTML = "0:00:00:000"
-    document.chronoForm.startstop.onclick = chronoStart
-}
-function chronoStop(){
-    document.chronoForm.startstop.value = "start!"
-    document.chronoForm.startstop.onclick = chronoContinue
-    document.chronoForm.reset.onclick = chronoStopReset
-    clearTimeout(timerID)
-}
-//-->
-</script>
+
 
 
 <!-- ----------------------------------------------UPPER ZIPPED-->
