--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="row v-center">
                 <div class="col-xs-9 col-md-7 header-text">
-                    <h2 class><i>Sleeping</i></h2>
+                    <h2 class><i>Sleeping, Personalized</i></h2>
                     <p></p>
                     <a href="#about-page" onclick="chronoStart()" class="button white">Sleep</a> <!--BEGIN BUTTON CLICKED-->
             </div>
